Edit - Delete component

--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -157,6 +157,10 @@ body {
   text-align: center;
 }
 
+.image-small {
+  width: 150px;
+}
+
 .btn-white {
   display: block;
   background: white;
@@ -240,6 +244,22 @@ body {
 
 .btn-success {
   background: rgb(23, 150, 19);
+}
+.btn-warning {
+  background: rgb(245, 181, 4);
+  color: white !important;
+  text-align: center;
+  text-decoration: none;
+  float: left;
+  margin-right: 20px;
+}
+
+.btn-danger {
+  background: rgb(185, 16, 16);
+  color: white !important;
+  text-align: center;
+  text-decoration: none;
+  float: left;
 }
 
 .btn-success:hover {
