--- a/src/components/CreateArticle.html
+++ b/src/components/CreateArticle.html
@@ -1,9 +1,10 @@
 <div class="general">
   <div class="center">
     <section id="content">
-      <h1 class="subheader">Crear Artículo</h1>
+      <h1 class="subheader" v-if="!isEdit">Crear Artículo</h1>
+      <h1 class="subheader" v-else>Editar Artículo</h1>
       <!-- Form-->
-      <form class="mid-form" v-on:submit.prevent="createArticle()">
+      <form class="mid-form" v-on:submit.prevent="save()">
         <div class="form-group">
           <label for="title">Título</label>
           <input type="text" name="title" v-model="article.title" required />
@@ -23,6 +24,13 @@
           </div>
         </div>
         <div class="form-group">
+          <div v-if="isEdit && article.image">
+            <img
+              :src="url + 'get-image/' + article.image"
+              :alt="article.title"
+              class="image-small"
+            />
+          </div>
           <label for="file0">Imagen</label>
           <input
             type="file"
@@ -33,7 +41,7 @@
           />
         </div>
         <div class="clearfix"></div>
-        <input type="submit" value="Guarda" class="btn btn-success" />
+        <input type="submit" value="Guardar" class="btn btn-success" />
       </form>
     </section>
     <Sidebar></Sidebar>
